fixed extra margins for news item page

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1076,6 +1076,9 @@ a.back_nav {
   &#policies {
     margin-top: 0;
   }
+  &.news-vacancy {
+  margin: 0;
+  }
 }
 
 div.section-group#staff {
