--- a/app/assets/stylesheets/medium.css.scss
+++ b/app/assets/stylesheets/medium.css.scss
@@ -96,6 +96,9 @@ $white_link: rgba(255,255,255, 0.75);
     &#data-small {
      margin-bottom: 60px;
     }
+    &#news {
+      padding-top: 0;
+    }
   }
   .column-2-3 {
     padding-top: 100px;
@@ -103,6 +106,10 @@ $white_link: rgba(255,255,255, 0.75);
     &#data_policy {
       margin: 0;
       padding: 0;
+    }
+    &#news-item {
+      margin-top: 0;
+      padding-top: 0;
     }
   }
 }
@@ -187,6 +194,10 @@ div#nav{
       }
     }
 	}
+}
+
+a.back_nav.news-vacancy {
+  margin: 60px 0;
 }
 
 div.dashboard-background {
